# RecruitX

./: .gitignore  docker-compose.yml
.github/workflows/: answer-grading-ci.yml  biometric-auth-ci.yml  code-eval-ci.yml  cv-parser-ci.yml  interview-qa-ci.yml  orchestrator-ci.yml  proctoring-ci.yml  speech-io-ci.yml
frontend/: .env.local.example  README.md  next.config.ts  package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AnswerInput.tsx  CodingRound.tsx  ProctoringMonitor.tsx  WebcamCapture.tsx
frontend/src/hooks/: useAudioRecorder.ts  useWebcam.ts
frontend/src/lib/: api-client.ts  backend.ts  session-cache.ts  types.ts
services/answer-grading/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
services/answer-grading/app/: auth.py  config.py  errors.py  logging_config.py  main.py  middleware.py  schemas.py
services/answer-grading/app/grading/: keywords.py  scorer.py  semantic.py
services/answer-grading/tests/: conftest.py  fakes.py  test_api.py  test_auth.py  test_body_size_limit.py  test_keywords.py  test_rate_limit_redis.py  test_scorer.py  test_semantic.py
services/biometric-auth/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
services/biometric-auth/app/: auth.py  config.py  db.py  errors.py  logging_config.py  main.py  middleware.py  schemas.py
services/biometric-auth/app/vision/: detector.py  embedding.py  liveness.py
services/biometric-auth/tests/: conftest.py  test_api.py  test_auth.py  test_body_size_limit.py  test_db.py  test_detector.py  test_embedding.py  test_liveness.py
services/code-eval/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
services/code-eval/app/: auth.py  config.py  errors.py  grading.py  logging_config.py  main.py  middleware.py  schemas.py
services/code-eval/app/analysis/: efficiency.py  static_python.py
services/code-eval/tests/: conftest.py  fakes.py  test_api.py  test_auth.py  test_body_size_limit.py  test_efficiency.py  test_grading.py  test_rate_limit_redis.py  test_sandbox_live.py  test_static_python.py
services/cv-parser/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt
services/cv-parser/app/: config.py  errors.py  logging_config.py  main.py
services/cv-parser/app/data/: degrees_db.json  sections_db.json  skills_db.json
services/cv-parser/app/parser/: __init__.py  certifications.py  contact.py  dates.py  education.py  experience.py  extractor.py  ner.py  ocr.py  pipeline.py  projects.py  schemas.py  sections.py  skills.py
services/cv-parser/tests/: conftest.py  test_api.py  test_experience.py  test_extractor.py  test_ocr_robustness.py  test_pipeline.py  test_rate_limit_redis.py
services/cv-parser/tests/fixtures/: sample_resume.txt
services/interview-qa/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
services/interview-qa/app/: auth.py  config.py  errors.py  logging_config.py  main.py  middleware.py
services/interview-qa/app/llm/: client.py
services/interview-qa/app/qa/: __init__.py  followup.py  generator.py  prompts.py  schemas.py
services/interview-qa/tests/: conftest.py  fakes.py  test_api.py  test_auth.py  test_body_size_limit.py  test_followup.py  test_generator.py  test_live_groq.py  test_llm_client.py  test_prompts.py  test_rate_limit_redis.py
services/orchestrator/: .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
services/orchestrator/app/: auth.py  config.py  errors.py  logging_config.py  main.py  mapping.py  middleware.py  orchestration.py  schemas.py  session_store.py
services/orchestrator/tests/: conftest.py  fakes.py  test_api.py  test_auth.py  test_body_size_limit.py  test_live_e2e.py  test_mapping.py  test_orchestration.py  test_session_store_live.py
services/proctoring/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
services/proctoring/app/: auth.py  config.py  errors.py  logging_config.py  main.py  middleware.py  schemas.py  session_store.py  severity.py
services/proctoring/app/vision/: detector.py  gaze.py
services/proctoring/tests/: conftest.py  fakes.py  test_api.py  test_auth.py  test_detector.py  test_gaze.py  test_session_store_live.py  test_severity.py
services/speech-io/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
services/speech-io/app/: auth.py  config.py  errors.py  logging_config.py  main.py  middleware.py  schemas.py
services/speech-io/app/stt/: client.py
services/speech-io/app/tts/: client.py
services/speech-io/tests/: conftest.py  fakes.py  test_api.py  test_auth.py  test_body_size_limit.py  test_live_speech.py  test_rate_limit_redis.py  test_stt_client.py  test_tts_client.py
(+18 files in other folders)
