[project]
name = "recruitix-cv-parser"
version = "1.0.0"
description = "spaCy NER + transformer (BERT-class) résumé parsing service for Recruitix."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4"]
ignore = [
  "E501",  # line length is a soft target, not a hard failure
  "B008",  # FastAPI's Depends()/File()-in-default-args is an intentional idiom
  "UP042",  # str+Enum (not enum.StrEnum) for broader compatibility with pydantic v2 serialization
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = false
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
